[feat] 모달 컴포넌트 추가

--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -15,7 +15,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video , button , input{
   margin: 0;
   padding: 0;
   border: 0;
@@ -51,4 +51,8 @@ table {
 a {
   text-decoration: none;
   color: #000;
+}
+
+input {
+  border: none;
 }
