--- a/src/scss/components/Header/Header.scss
+++ b/src/scss/components/Header/Header.scss
@@ -1,16 +1,23 @@
-.nav-area {
-  top: 0;
-  min-height: 130px;
-
-  width: 100vw;
-  padding: 1rem 3em;
+header {
+  position: absolute;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  .logo {
-    width: 10rem;
+
+  .nav-area {
+    top: 0;
+    min-height: 130px;
+    width: 100vw;
+    padding: 1rem 3em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .logo {
+      width: 10rem;
+    }
   }
+
 }
+
 
 .none {
   display: none;
