--- a/src/scss/components/Header/Navbar.scss
+++ b/src/scss/components/Header/Navbar.scss
@@ -1,3 +1,4 @@
+
 .nav-wrapper {
   //border: 1px solid black;
   display: flex;
@@ -10,34 +11,7 @@
   height: 100%;
   width: 100%;
 
-  .language {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 10%;
-  }
-  .menu-items > svg {
-    padding: 13px;
-  }
 
-  .modal {
-    font-weight: 700;
-    border-left: 1px solid #d5c1b4;
-    border-right: 1px solid #d5c1b4;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 0.5rem;
-    & > a {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  }
 
   & > .menus {
     display: flex;
@@ -47,22 +21,9 @@
     justify-content: flex-end;
     height: 100%;
     width: 100%;
+    gap : 1.2rem;
     //border:1px solid red;
-    & > li {
-      //border:1px solid hotpink;
-      height: 100%;
-      width: auto;
-      display: flex;
-      align-items: center;
-      padding: 1rem;
-    }
 
-    & > li:hover {
-      text-decoration: #d5c1b4 solid underline;
-    }
-    .submenu-container {
-      position: absolute;
-      display: none;
-    }
+
   }
 }
