--- a/src/scss/components/Header/Header.scss
+++ b/src/scss/components/Header/Header.scss
@@ -1,7 +1,8 @@
 header {
-  position: absolute;
+  position: sticky;
   width: 100%;
   display: flex;
+  height: 7rem;
 
   .nav-area {
     top: 0;
