--- a/src/scss/components/Modal/Modal.scss
+++ b/src/scss/components/Modal/Modal.scss
@@ -1,7 +1,7 @@
 .modal-page {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    position: relative;
+    width: calc(100% - 2rem);
+    height: 100rem;
     background-color: #fff;
     overflow-y: scroll;
     font-family: 'FlamaBook', sans-serif;
@@ -12,16 +12,19 @@
     flex-direction: column;
     align-items: center;
     padding: 2rem;
-    height: 100rem;
+    margin: 1rem;
+
       .close {
         position: absolute;
-        top: 3rem;
-        right: 3rem;
+        right: 1rem;
+        // border: 1px solid black;
+        padding: 3rem;
+        top : 0;
       }
 
-      .close:after {
+      .close::after {
         position: absolute;
-        right: 0;
+        right: 2rem;
         width: 2.5rem;
         height: 0.125rem;
         content: "";
@@ -29,9 +32,9 @@
         transform: rotate(42deg);
       }
 
-      .close:before {
+      .close::before {
         position: absolute;
-        right: 0;
+        right: 2rem;
         width: 2.5rem;
         height: 0.125rem;
         content: "";
@@ -105,126 +108,13 @@
   }
 }
 
-//.modal-sample {
-//  position: absolute;
-//  width: 100%;
-//  height: 100%;
-//  background-color: #fff;
-//  overflow-y: scroll;
-//  font-family: 'FlamaBook', sans-serif;
-//  letter-spacing: 1px;
-//  font-weight: 300;
-//
-//
-//  .modal-container  {
-//    position: relative;
-//
-//    width: 100%;
-//    height: 100%;
-//    display: flex;
-//    flex-direction: column;
-//    align-items: center;
-//
-//    & footer {
-//      width: 100%;
-//      height: 100%;
-//      border: 3px solid #000000;
-//    }
-//    & > .message {
-//      width: 100%;
-//      height: 100%;
-//      border: 3px solid #000000;
-//    }
-//
-//    & > .info {
-//      padding: 2rem;
-//
-//      display: grid;
-//      width: 100%;
-//      position: relative;
-//
-//
-//      & > form {
-//        display: grid;
-//        grid-template-columns: repeat(2, 1fr);
-//        grid-template-rows: repeat(6, 1fr);
-//        grid-column-gap: 2rem;
-//        grid-row-gap: 40px;
-//        padding: 2rem 10rem;
-//
-//        & > div {
-//          border: 2px solid purple;
-//          width: 100%;
-//          height: 8rem;
-//          //overflow: hidden;
-//          display: flex;
-//          flex-direction: column;
-//
-//        }
-//
-//        & > div > label {
-//          width: 100%;
-//          height: 100%;
-//          display: inline-flex;
-//          align-items: flex-end;
-//          transform: translateY(-10px);
-//        }
-//        & > div > input {
-//          width: 98%;
-//          display: block;
-//          height: 3rem;
-//          line-height: 3rem;
-//          outline: none;
-//          border-bottom: 2px solid#d5c1b4;
-//          box-shadow: 0px 0px 10px 0px rgba(209,201,201,0.93);
-//          box-sizing: border-box;
-//        }
-//      }
-//
-//      footer {
-//        color: red;
-//        position: absolute;
-//        height: 100%;
-//
-//      }
-//    }
-//  }
-//
-//  .close {
-//    position: absolute;
-//    top: 3rem;
-//    right: 3rem;
-//  }
-//
-//  .close:after {
-//    position: absolute;
-//    right: 0;
-//    width: 2.5rem;
-//    height: 0.125rem;
-//    content: "";
-//    background-color: #000;
-//    transform: rotate(42deg);
-//  }
-//
-//  .close:before {
-//    position: absolute;
-//    right: 0;
-//    width: 2.5rem;
-//    height: 0.125rem;
-//    content: "";
-//    background-color: #000;
-//    transform: rotate(-42deg);
-//  }
-//
-//  .title {
-//    border: 3px solid black;
-//    display: flex;
-//    width: 100%;
-//    height: 30%;
-//    align-items: center;
-//    justify-content: center;
-//    font-size: 3.4rem;
-//  }
-//
-//
-//}
+.modal-page::after {
+  content: '';
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: -1;
+}
