--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,3 +8,19 @@ html, body {
 #root {
   width: 100%;
 }
+
+#root::before {
+  content: '';
+  background: url("../assets/soundwave-1.svg");
+  transition: opacity .3s cubic-bezier(.4,0,.2,1);
+  position: absolute;
+  top: -94px;
+  left: -82px;
+  z-index: 2;
+  display: block;
+  width: 308px;
+  height: 360px;
+  pointer-events: none;
+  background-size: 100% auto;
+  opacity: .2;
+}
