--- a/src/scss/components/MainContent/SlideContent.scss
+++ b/src/scss/components/MainContent/SlideContent.scss
@@ -11,6 +11,7 @@
   font-family : 'FlamaBook', sans-serif;
   box-sizing: border-box;
   position : relative;
+  display: none;
 
   //border: 11px solid cadetblue;
   & > div {
@@ -59,4 +60,8 @@
 
 
   }
+}
+
+.active {
+  display: flex;
 }
