[fix] 레이아웃 깨지지 않는 완벽한 슬라이드 섹션(진경성)

--- a/src/scss/components/MainContent/SlideContent.scss
+++ b/src/scss/components/MainContent/SlideContent.scss
@@ -1,23 +1,22 @@
 .slide-content {
   align-items: center;
-  border: 1px solid dodgerblue;
+ // border: 5px solid hotpink;
   height: 100%;
   flex-shrink: 0;
   width: 100%;
   justify-content: center;
   display: flex;
-  padding: -4rem;
+  //padding: -4rem;
   flex-direction: column;
   font-family : 'FlamaBook', sans-serif;
   box-sizing: border-box;
   position : relative;
-  display: none;
 
   //border: 11px solid cadetblue;
   & > div {
     width: 40%;
     align-items: center;
-    border: 1px solid grey;;
+ //   border: 1px solid grey;;
     text-align: center;
     height: 100%;
     display: flex;
