--- a/src/scss/components/Header/Header.scss
+++ b/src/scss/components/Header/Header.scss
@@ -3,6 +3,9 @@ header {
   width: 100%;
   display: flex;
   height: 7rem;
+  top: 0;
+  //background: #fff;
+  z-index: 10;
 
   .nav-area {
     top: 0;
@@ -17,6 +20,10 @@ header {
     }
   }
 
+}
+
+.white {
+  background: #fff;
 }
 
 
