--- a/src/scss/components/MainContent/HeroHome.scss
+++ b/src/scss/components/MainContent/HeroHome.scss
@@ -7,12 +7,19 @@
   align-items: center;
 
   .HeroHome-slider {
-    height: 80%;
+    //border: 5px solid red;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
 
     .slider-container {
+      position: absolute;
       display: flex;
-      position: relative;
+      width: 100%;
       height: 100%;
+      //border: 5px solid green;
+      transition: transform 0.3s;
     }
   }
 
