[feat] baswa-system 섹션 추가

--- a/src/scss/components/Header/Dropdown.scss
+++ b/src/scss/components/Header/Dropdown.scss
@@ -11,7 +11,7 @@
   .submenu-list {
     height: 100%;
     border-bottom: 1px solid #d5c1b4;
-
+    background: white;
     width: 100%;
 
     & > a{
