--- a/src/scss/components/Header/Header.scss
+++ b/src/scss/components/Header/Header.scss
@@ -2,15 +2,18 @@ header {
   position: sticky;
   width: 100%;
   display: flex;
-  height: 7rem;
   top: 0;
   //background: #fff;
-  z-index: 10;
-  transition: background-color 0.2s ease-in;
+  transition: background-color 0.3s cubic-bezier(.4,0,.2,1), height 0.3s cubic-bezier(.4,0,.2,1);
+ // border: 1px solid black;
+  height: 8rem;
+  pointer-events: all;
+  z-index: 2;
+
 
   .nav-area {
     top: 0;
-    min-height: 130px;
+    //min-height: 130px;
     width: 100vw;
     padding: 1rem 3em;
     display: flex;
@@ -18,6 +21,7 @@ header {
     align-items: center;
     .logo {
       width: 10rem;
+      flex-shrink: 0;
     }
   }
 }
@@ -29,3 +33,4 @@ header {
 .none {
   display: none;
 }
+
