--- a/src/scss/components/MainContent/Main.scss
+++ b/src/scss/components/MainContent/Main.scss
@@ -5,11 +5,9 @@ main {
 
 
   section {
-
     width: 100%;
-   // height: calc(100vh - 7rem);
     height: calc(100vh - 7rem);
-    border-bottom: 1px solid red;
+   // border-bottom: 1px solid red;
   }
 
   article {
@@ -20,3 +18,11 @@ main {
   }
 }
 
+
+.content {
+
+}
+
+.baswa-system {
+  border: 1px solid pink;
+}
