--- a/src/scss/components/MainContent/SlideContent.scss
+++ b/src/scss/components/MainContent/SlideContent.scss
@@ -14,7 +14,7 @@
 
   //border: 11px solid cadetblue;
   & > div {
-    width: 40%;
+    width: 100%;
     align-items: center;
  //   border: 1px solid grey;;
     text-align: center;
@@ -63,4 +63,8 @@
 
 .active {
   display: flex;
+}
+.HeroHome-slider > div > div:nth-child(4) > div {
+ // border: 1px solid springgreen;
+  background: url("../../../assets/optimized-baswa-phon-classic-top_sound-absorption-2-final.jpg") center center/70% no-repeat fixed;
 }
