--- a/src/scss/components/Modal/Modal.scss
+++ b/src/scss/components/Modal/Modal.scss
@@ -1,6 +1,9 @@
+.modal-container {
+
+}
 .modal-page {
     position: relative;
-    width: calc(100% - 2rem);
+    width: auto;
     height: 100rem;
     background-color: #fff;
     overflow-y: scroll;
@@ -12,7 +15,8 @@
     flex-direction: column;
     align-items: center;
     padding: 2rem;
-    margin: 1rem;
+    margin: -4rem 0.5rem 0;
+    z-index: 100;
 
       .close {
         position: absolute;
@@ -108,7 +112,7 @@
   }
 }
 
-.modal-page::after {
+.modal-page-background {
   content: '';
   position: fixed;
   top: 0px;
@@ -116,5 +120,5 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
-  z-index: -1;
+  z-index: 90
 }
