--- a/src/scss/components/Header/Dropdown.scss
+++ b/src/scss/components/Header/Dropdown.scss
@@ -6,7 +6,7 @@
   top: 90%;
   width: 267%;
   display: none;
-  box-shadow: 3px 1px 25px -3px rgba(61,61,61,0.75);
+  box-shadow: 3px 1px 25px -3px rgba(61, 61, 61, 0.75);
 
   .submenu-list {
     height: 100%;
@@ -14,20 +14,17 @@
     background: white;
     width: 100%;
 
-    & > a{
+    & > a {
       width: 100%;
       display: block;
       padding: 0.7rem 0.4rem;
       height: 100%;
-      transition: background-color .2s cubic-bezier(.4,0,.2,1);
+      transition: background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
     }
-    & > a:hover{
-      background-color : #f1e4dc;
-
+    & > a:hover {
+      background-color: #f1e4dc;
     }
   }
-
-
 }
 
 .show {
