--- a/src/scss/components/MainContent/BaswaGallery.scss
+++ b/src/scss/components/MainContent/BaswaGallery.scss
@@ -4,136 +4,98 @@
   height: auto;
   padding-top: 60px;
 
-
-   .index {
-     height: 15rem;
-     display: grid;
-     grid-template-columns: 1fr 3fr 1fr;
-     align-items: center;
-     border: 4px solid pink;
+  .index {
+    height: 15rem;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    align-items: center;
+    border: 4px solid pink;
     // @include flex-row;
-     position: relative;
+    position: relative;
 
-
-
-     & > div {
-       flex-basis: auto;
-     }
-     &_title {
-       height: 100%;
-       background: rgba(213,193,180,.2);
-       display: flex;
-       align-items: center;
-       font-size:1.6rem;
-       flex-basis: auto;
-       border-radius: 0 30px 0 0 ;
-       padding: 1rem;
-       font-weight: 600;
-       line-height: 1.3;
-     }
+    & > div {
+      flex-basis: auto;
+    }
+    &_title {
+      height: 100%;
+      background: rgba(213, 193, 180, 0.2);
+      display: flex;
+      align-items: center;
+      font-size: 1.6rem;
+      flex-basis: auto;
+      border-radius: 0 30px 0 0;
+      padding: 1rem;
+      font-weight: 600;
+      line-height: 1.3;
+    }
     &_choice {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       gap: 4px;
 
-      & > div {
-        display: grid;
-        grid-template-columns: 1fr 3fr;
-      //  border: 1px solid red;
+      & .menu-container {
+        position: relative;
+        // border: 1px solid red;
+        width: 100%;
+        height: 100%;
+        & .menu {
+          display: grid;
+          grid-template-columns: 1fr 3fr;
 
+          & > h2 {
+            font-size: 3rem;
+            transform: translateX(-15px);
+            grid-column: 1/2;
+            grid-row: 1/3;
+            color: var(--darkBeige);
+          }
+          & > h3 {
+            font-size: 1rem;
+          }
+          & > span {
+            font-weight: 100;
+            cursor: pointer;
 
-        & > h2 {
-          font-size: 3rem;
-          transform: translateX(-15px);
-          grid-column:1/2;
-          grid-row: 1/3;
-          color: var(--darkBeige)
-        }
-        & > h3 {
-          font-size: 1rem;
-        }
-        & > span {
-          font-weight: 100;
-          cursor: pointer;
+            &::after {
+              content: attr(data-arrow);
+              width: 10px;
+              height: 10px;
+            }
+          }
         }
 
+        & .submenu-container {
+          width: 50%;
+          height: 100%;
+          position: absolute;
+          //    border: 1px solid black;
+          left: 20%;
+          bottom: 0;
+        }
       }
     }
-     &_button {
-       width: 100%;
-       background: black;
-       height: 30%;
-       & > button {
-         height: 100%;
-         width: 100%;
-         background: black;
-         color: var(--lightBeige);
-         font-weight: 500;
-       }
-     }
-
-
+    &_button {
+      width: 100%;
+      background: black;
+      height: 30%;
+      & > button {
+        height: 100%;
+        width: 100%;
+        background: black;
+        color: var(--lightBeige);
+        font-weight: 500;
+        cursor: pointer;
+      }
+    }
   }
 
+  .gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    position: relative;
+  }
+}
 
-
-   .gallery {
-     display: grid;
-     grid-template-columns: 1fr 1fr;
-     height: var(--galleryHeight);
-     position: relative;
-
-     //.text-container {
-     //  background: var(--lightBeige);
-     //  padding: 2rem;
-     //  display: flex;
-     //  flex-direction: column;
-     //  align-items: flex-start;
-     //
-     //}
-
-
-     //.image-container {
-    ////   border: 11px solid yellow;
-    //   position: relative;
-    //   display: flex;
-    //   align-items: center;
-    //   justify-content: center;
-    //   background: var(--mediumBeige);
-    //   & > img {
-    //     position: absolute;
-    //     width: 50%;
-    //     height: 50%;
-    //     object-fit: cover;
-    //
-    //   }
-    // }
-
-
-     //SYSTEM
-    // & > p {
-    //   color: #fff;
-    //   text-transform: uppercase;
-    //   position: absolute;
-    //   top: 50%;
-    //   left: 50%;
-    //   padding-top: 0;
-    //   transform: translate(-60%,-50%) rotate(-90deg);
-    //   z-index: 20;
-    ////   border: 2px solid blue;
-    //   font-size: 3rem;
-    //   height: 0px;
-    //   letter-spacing: 3px;
-   //  }
-
-
-
-
-   }
-
-
-
-
-
-
+.downArrow {
+  content: '\2191';
 }
