--- a/src/scss/components/MainContent/Main.scss
+++ b/src/scss/components/MainContent/Main.scss
@@ -1,26 +1,23 @@
 main {
-  position:relative;
+  position: relative;
   width: 100vw;
   border: 3px solid black;
-
 
   section {
     width: 100%;
     height: calc(100vh - 7rem);
-   // border-bottom: 1px solid red;
+    // border-bottom: 1px solid red;
   }
 
   article {
-    width: 100%;
+    // width: 100%;
     // height: calc(100vh - 7rem);
-    height: 20rem;
+    // height: 20rem;
     border-bottom: 1px solid blue;
   }
 }
 
-
 .content {
-
 }
 
 .baswa-system {
