[feat] references 진행중

--- a/src/scss/components/MainContent/HeroHomeSlideContent.scss
+++ b/src/scss/components/MainContent/HeroHomeSlideContent.scss
@@ -1,12 +1,12 @@
 .slide-content {
   align-items: center;
- // border: 5px solid hotpink;
+  border: 5px solid hotpink;
   height: 100%;
   flex-shrink: 0;
   width: 100%;
   justify-content: center;
   display: flex;
-  //padding: -4rem;
+  padding: 0 4rem;
   flex-direction: column;
   font-family : 'FlamaBook', sans-serif;
   box-sizing: border-box;
