--- a/src/scss/components/Header/Dropdown.scss
+++ b/src/scss/components/Header/Dropdown.scss
@@ -1,11 +1,11 @@
 .submenu-container {
   //display: none;
-  //border: 1px solid red;
+  border: 1px solid cadetblue;
   z-index: 1000;
   position: absolute;
   top: 90%;
   width: 267%;
-  display: none;
+  display: block;
   box-shadow: 3px 1px 25px -3px rgba(61, 61, 61, 0.75);
 
   .submenu-list {
