--- a/src/scss/components/MainContent/Gallery.scss
+++ b/src/scss/components/MainContent/Gallery.scss
@@ -1,15 +1,13 @@
 .baswa-gallery {
-  border: 2px solid hotpink;
+  //border: 2px solid hotpink;
   //  height: ;
-  height: auto;
-  padding-top: 60px;
-
+  border: 2px solid purple;
+  height: 100%;
   .index {
-    height: 15rem;
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     align-items: center;
-    border: 4px solid pink;
+   // border: 4px solid pink;
     // @include flex-row;
     position: relative;
 
@@ -32,16 +30,19 @@
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       gap: 4px;
+      height: 20%;
 
       & .menu-container {
         position: relative;
-        // border: 1px solid red;
         width: 100%;
         height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
         & .menu {
           display: grid;
           grid-template-columns: 1fr 3fr;
-
           & > h2 {
             font-size: 3rem;
             transform: translateX(-15px);
@@ -60,17 +61,36 @@
               content: attr(data-arrow);
               width: 10px;
               height: 10px;
+              color: var(--darkBeige)
             }
           }
         }
 
+
         & .submenu-container {
-          width: 50%;
-          height: 100%;
-          position: absolute;
-          //    border: 1px solid black;
-          left: 20%;
-          bottom: 0;
+          z-index: 200;
+          font-size: 0.8rem;
+         // border: 1px solid red;
+          display: flex;
+          flex-direction: column;
+          overflow-x: scroll;
+          transition: opacity .1s cubic-bezier(.17,.67,.7,.55),
+        visibility  .8s cubic-bezier(.17,.67,.7,.55),;
+          box-shadow: 3px 1px 25px -3px rgba(61, 61, 61, 0.75);
+          position: relative;
+          top: 5%;
+          left: 5%;
+          &:hover {
+            background: var(--darkBeige);
+          }
+
+          & > div {
+           // border: 1px solid pink;
+            height: 100%;
+            line-height: 100%;
+          }
+
+
         }
       }
     }
@@ -99,3 +119,4 @@
 .downArrow {
   content: '\2191';
 }
+
