--- a/src/scss/components/MainContent/References.scss
+++ b/src/scss/components/MainContent/References.scss
@@ -1,22 +1,22 @@
 .references {
   position: relative;
+  margin: 8rem 0;
 
   .references-frame {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: calc(100vh - 6rem);
     transition-duration: 0ms;
-
+    overflow: hidden;
 
     & > .references-container {
       display: flex;
-      //border: 1px solid cyan;
       position: absolute;
       width: 100%;
       height: 100%;
 
+
       & > .references-item {
-        // border: 1px solid greenyellow;
         width: 100%;
         display: grid;
         flex-shrink: 0;
@@ -78,20 +78,20 @@
 
           & > div {
             position: absolute;
-            border: 2px solid blueviolet;
+
+            img {
+              width: 100%;
+              object-fit: cover;
+            }
           }
 
           & > div:nth-child(1) {
             width: 45%;
             height: 65%;
             top: 10%;
-            right: 0;
-            background-image: var(--backgroundUrl);
+            right: 2%;
+            //background-image: var(--backgroundUrl);
 
-            img {
-              width: 100%;
-              object-fit: cover;
-            }
 
             //   animation: upMotion 1.5s ease-out;
           }
@@ -118,7 +118,7 @@
     bottom: 0;
     left: 0;
     border: 2px solid teal;
-    z-index: 200;
+    z-index: 1;
     background: var(--darkBeige);
     opacity: 1;
 
@@ -190,7 +190,7 @@
 }
 
 .opacityDown {
-  opacity: 0;
+  opacity: 0.5;
 }
 
 @keyframes lightUp {
