--- a/src/scss/components/MainContent/Gallery.scss
+++ b/src/scss/components/MainContent/Gallery.scss
@@ -1,13 +1,12 @@
 .baswa-gallery {
   //border: 2px solid hotpink;
-  //  height: ;
-  border: 2px solid purple;
+
   height: 100%;
   .index {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     align-items: center;
-   // border: 4px solid pink;
+    // border: 4px solid pink;
     // @include flex-row;
     position: relative;
 
@@ -61,21 +60,20 @@
               content: attr(data-arrow);
               width: 10px;
               height: 10px;
-              color: var(--darkBeige)
+              color: var(--darkBeige);
             }
           }
         }
 
-
         & .submenu-container {
           z-index: 200;
           font-size: 0.8rem;
-         // border: 1px solid red;
+          // border: 1px solid red;
           display: flex;
           flex-direction: column;
           overflow-x: scroll;
-          transition: opacity .1s cubic-bezier(.17,.67,.7,.55),
-        visibility  .8s cubic-bezier(.17,.67,.7,.55),;
+          transition: opacity 0.1s cubic-bezier(0.17, 0.67, 0.7, 0.55),
+            visibility 0.8s cubic-bezier(0.17, 0.67, 0.7, 0.55);
           box-shadow: 3px 1px 25px -3px rgba(61, 61, 61, 0.75);
           position: relative;
           top: 5%;
@@ -85,12 +83,10 @@
           }
 
           & > div {
-           // border: 1px solid pink;
+            // border: 1px solid pink;
             height: 100%;
             line-height: 100%;
           }
-
-
         }
       }
     }
@@ -117,6 +113,5 @@
 }
 
 .downArrow {
-  content: '\2191';
+  content: "\2191";
 }
-
