--- a/src/scss/components/MainContent/HeroHomeSlideContent.scss
+++ b/src/scss/components/MainContent/HeroHomeSlideContent.scss
@@ -1,6 +1,6 @@
 .slide-content {
   align-items: center;
-  border: 5px solid hotpink;
+  //border: 5px solid hotpink;
   height: 100%;
   flex-shrink: 0;
   width: 100%;
@@ -8,31 +8,31 @@
   display: flex;
   padding: 0 4rem;
   flex-direction: column;
-  font-family : 'FlamaBook', sans-serif;
+  font-family: "FlamaBook", sans-serif;
   box-sizing: border-box;
-  position : relative;
+  position: relative;
 
   //border: 11px solid cadetblue;
   & > div {
     width: 100%;
     align-items: center;
- //   border: 1px solid grey;;
+    //   border: 1px solid grey;;
     text-align: center;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position:relative;
+    position: relative;
 
     .number {
-      font-size: .7rem;
+      font-size: 0.7rem;
       letter-spacing: 4px;
       font-weight: 100;
       padding-bottom: 2rem;
     }
 
     .title {
-      font-size: 3.0rem;
+      font-size: 3rem;
       font-weight: 200;
       letter-spacing: 3px;
       padding-bottom: 2rem;
@@ -48,16 +48,14 @@
       display: flex;
       & > button {
         height: auto;
-        padding: .2rem;
+        padding: 0.2rem;
         border: none;
         background: none;
-        font-size: 1.0rem;
+        font-size: 1rem;
         font-weight: 900;
         border-bottom: 3px solid #d5c1b4;
       }
     }
-
-
   }
 }
 
@@ -65,6 +63,7 @@
   display: flex;
 }
 .HeroHome-slider > div > div:nth-child(4) > div {
- // border: 1px solid springgreen;
-  background: url("../../../assets/optimized-baswa-phon-classic-top_sound-absorption-2-final.jpg") center center/70% no-repeat fixed;
+  // border: 1px solid springgreen;
+  background: url("../../../assets/optimized-baswa-phon-classic-top_sound-absorption-2-final.jpg")
+    center center/70% no-repeat fixed;
 }
