--- a/src/scss/components/MainContent/Main.scss
+++ b/src/scss/components/MainContent/Main.scss
@@ -1,7 +1,7 @@
 main {
   position: relative;
   width: 100vw;
-  border: 3px solid black;
+  // border: 3px solid black;
 
   section {
     width: 100%;
@@ -13,7 +13,7 @@ main {
     // width: 100%;
     // height: calc(100vh - 7rem);
     // height: 20rem;
-    border-bottom: 1px solid blue;
+    // border-bottom: 1px solid blue;
   }
 }
 
@@ -21,6 +21,6 @@ main {
 }
 
 .baswa-system {
-  border: 1px solid pink;
+  //  border: 1px solid pink;
 }
 
