--- a/src/scss/components/MainContent/Gallery.scss
+++ b/src/scss/components/MainContent/Gallery.scss
@@ -1,19 +1,19 @@
 .baswa-gallery {
-  //border: 2px solid hotpink;
-  //  height: ;
-  border: 2px solid purple;
+
   height: 100%;
+
   .index {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     align-items: center;
-   // border: 4px solid pink;
+    // border: 4px solid pink;
     // @include flex-row;
     position: relative;
 
     & > div {
       flex-basis: auto;
     }
+
     &_title {
       height: 100%;
       background: rgba(213, 193, 180, 0.2);
@@ -26,6 +26,7 @@
       font-weight: 600;
       line-height: 1.3;
     }
+
     &_choice {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
@@ -43,6 +44,7 @@
         & .menu {
           display: grid;
           grid-template-columns: 1fr 3fr;
+
           & > h2 {
             font-size: 3rem;
             transform: translateX(-15px);
@@ -50,9 +52,11 @@
             grid-row: 1/3;
             color: var(--darkBeige);
           }
+
           & > h3 {
             font-size: 1rem;
           }
+
           & > span {
             font-weight: 100;
             cursor: pointer;
@@ -70,22 +74,23 @@
         & .submenu-container {
           z-index: 200;
           font-size: 0.8rem;
-         // border: 1px solid red;
+          // border: 1px solid red;
           display: flex;
           flex-direction: column;
           overflow-x: scroll;
-          transition: opacity .1s cubic-bezier(.17,.67,.7,.55),
-        visibility  .8s cubic-bezier(.17,.67,.7,.55),;
+          transition: opacity .1s cubic-bezier(.17, .67, .7, .55),
+          visibility .8s cubic-bezier(.17, .67, .7, .55),;
           box-shadow: 3px 1px 25px -3px rgba(61, 61, 61, 0.75);
           position: relative;
           top: 5%;
           left: 5%;
+
           &:hover {
             background: var(--darkBeige);
           }
 
           & > div {
-           // border: 1px solid pink;
+            // border: 1px solid pink;
             height: 100%;
             line-height: 100%;
           }
@@ -94,10 +99,12 @@
         }
       }
     }
+
     &_button {
       width: 100%;
       background: black;
-      height: 30%;
+      height: 15%;
+
       & > button {
         height: 100%;
         width: 100%;
@@ -120,3 +127,143 @@
   content: '\2191';
 }
 
+@media screen and (max-width: 1024px) {
+
+
+  .baswa-gallery .index {
+    //border: 2px solid purple;
+    background: rgba(213, 193, 180, 0.2);
+    border-radius: 0 30px 0 0;
+    width: 90%;
+    position: relative;
+
+    height: 25rem;
+    padding: 2rem;
+    display: flex;
+    margin-bottom: 2rem;
+    flex-direction: column;
+
+
+    & > .index_title {
+      width: 98%;
+      font-size: 1.2rem;
+      font-weight: bolder;
+      background: none;
+      border: none;
+      padding: 0;
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-start;
+      flex-basis: 100px;
+
+      & > p {
+        width: 40%;
+      }
+
+    }
+
+    & > .index_choice {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      width: 100%;
+      transform: translateX(3%);
+      height: auto;
+
+      > .menu-container {
+        position: relative;
+        align-items: flex-start;
+        font-size: 1rem;
+
+
+        & > .submenu-container {
+          //color: red;
+          //opacity: 1;
+          //visibility: visible;
+          position: absolute;;
+          top: 80%;
+          left: 10%;
+        }
+
+      }
+
+    }
+
+
+    & > .index_button {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 96%;
+      height: 12%;
+
+      & > button {
+        width: 100%;
+      }
+    }
+
+
+  }
+
+
+  .gallery-container {
+    height: 120rem;
+    display: flex;
+    flex-direction: column;
+
+    .gallery {
+      display: flex;
+      flex-direction: column;
+      //grid-template-columns: 1fr;
+      position: relative;
+      justify-content: center;
+      align-items: center;
+      // border: 1px solid red;
+      order: 1;
+      width: 100%;
+      height: 100%;
+    }
+
+    .gallery > .gallery-side-img {
+      //    display: flex;
+      //grid-template-columns: 1fr;
+      position: absolute;
+      // border: 3px solid cadetblue;
+      order: 1;
+      width: 100%;
+      height: 70%;
+      top: 0;
+      //height: 100%;
+      & img {
+        width: 95%;
+        height: 95%;
+      }
+    }
+
+    .gallery > .gallery-side-text {
+      height: 30%;
+      ///   border: 3px solid hotpink;
+      bottom: 0;
+      order: 2;
+      padding: 1rem;
+      font-size: 1rem;
+      position: absolute;
+      width: 100%;
+
+      & > .side-text-desc {
+        padding: 1rem 0 0;
+      }
+
+      & > span {
+        padding: 0;
+      }
+    }
+
+    .gallery .system {
+      display: none;
+    }
+
+
+  }
+
+}
