--- a/src/scss/components/MainContent/HeroHomeSlideContent.scss
+++ b/src/scss/components/MainContent/HeroHomeSlideContent.scss
@@ -1,6 +1,6 @@
 .slide-content {
   align-items: center;
-  border: 5px solid hotpink;
+  // border: 5px solid hotpink;
   height: 100%;
   flex-shrink: 0;
   width: 100%;
@@ -8,21 +8,21 @@
   display: flex;
   padding: 0 4rem;
   flex-direction: column;
-  font-family : 'FlamaBook', sans-serif;
+  font-family: 'FlamaBook', sans-serif;
   box-sizing: border-box;
-  position : relative;
+  position: relative;
 
   //border: 11px solid cadetblue;
   & > div {
     width: 100%;
     align-items: center;
- //   border: 1px solid grey;;
+    //   border: 1px solid grey;;
     text-align: center;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position:relative;
+    position: relative;
 
     .number {
       font-size: .7rem;
@@ -46,6 +46,7 @@
     .more {
       padding: 1rem;
       display: flex;
+
       & > button {
         height: auto;
         padding: .2rem;
@@ -64,7 +65,8 @@
 .active {
   display: flex;
 }
+
 .HeroHome-slider > div > div:nth-child(4) > div {
- // border: 1px solid springgreen;
+  // border: 1px solid springgreen;
   background: url("../../../assets/optimized-baswa-phon-classic-top_sound-absorption-2-final.jpg") center center/70% no-repeat fixed;
 }
