--- a/src/scss/components/MainContent/Gallery.scss
+++ b/src/scss/components/MainContent/Gallery.scss
@@ -77,7 +77,7 @@
           flex-direction: column;
           overflow-x: scroll;
           transition: opacity 0.1s cubic-bezier(0.17, 0.67, 0.7, 0.55),
-            visibility 0.8s cubic-bezier(0.17, 0.67, 0.7, 0.55);
+          visibility 0.8s cubic-bezier(0.17, 0.67, 0.7, 0.55);
           box-shadow: 3px 1px 25px -3px rgba(61, 61, 61, 0.75);
           position: relative;
           top: 5%;
@@ -184,6 +184,7 @@
       right: 0;
       width: 96%;
       height: 12%;
+      z-index: -1;
 
       & > button {
         width: 100%;
@@ -218,6 +219,7 @@
       width: 100%;
       height: 70%;
       top: 0;
+      z-index: -1;
       //height: 100%;
       & img {
         width: 95%;
