--- a/src/scss/components/Header/MenuItems.scss
+++ b/src/scss/components/Header/MenuItems.scss
@@ -17,6 +17,7 @@
   padding: 1rem;
   cursor: pointer;
 
+
   & > button {
     outline: none;
     border:none;
@@ -26,6 +27,7 @@
     transition: color .3s cubic-bezier(.4,0,.2,1);
     width: 100%;
     height: 100%;
+    cursor: pointer;
   }
   & > button:hover {
     color: #d5c1b4;
