--- a/src/scss/components/Header/MenuItems.scss
+++ b/src/scss/components/Header/MenuItems.scss
@@ -5,12 +5,11 @@
   width: 10%;
 }
 .menu-items {
- // border:1px solid hotpink;
   height: 100%;
   width: auto;
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   text-align: left;
   flex-direction: column;
   position: relative;
